tests/Tuc/Fixtures/errors/WrongData-read.tuc
tuc parse error test
participants
    GenericService parts
    [PersonDatabase] parts

GenericService
    [PersonDatabase] -> Wrong
